--- a/index.html
+++ b/index.html
@@ -1,14 +1,42 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="Css/normalize.css">
-    <link rel="stylesheet" type="text/css" href="Css/styles.css">
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Arquitectura</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&family=Raleway:wght@300;400;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" type="text/css" href="Css/normalize.css" />
+    <link rel="stylesheet" type="text/css" href="Css/styles.css" />
+  </head>
+  <body>
+    <header class="header">
+      <div class="contenedor contenido-header">
+        <div class="barra">
+          <div class="logo">
+            <h1 class="nombre-sitio">Arquitectura <span>Bosque</span></h1>
+          </div>
+          <div class="contacto">
+            <a href="tel:01-800-0000-00">01-800-0000-00</a>
+            <nav class="navegacion">
+              <a class="link" href="#">Inicio</a>
+              <a class="link" href="#">Nosotros</a>
+              <a class="link" href="#">Modelos</a>
+              <a class="link" href="#">Galeria</a>
+              <a class="link" href="#">Contacto</a>
+            </nav>
+          </div>
+        </div>
+        <div class="slogan">
+          <h1>Tu casa en el bosque</h1>
+          <p>Construimos la casa de tus sueños</p>
+        </div>
+      </div>
+    </header>
+  </body>
 </html>
