--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
       <div class="contenedor contenido-header">
         <div class="barra">
           <div class="logo">
-            <h1 class="nombre-sitio">Arquitectura <span>Bosque</span></h1>
+            <h1 class="nombre-sitio">Arquitectura<span>Bosque</span></h1>
           </div>
           <div class="contacto">
-            <a href="tel:01-800-0000-00">01-800-0000-00</a>
+            <a class="telefono" href="tel:01-800-0000-00">01-800-0000-00</a>
             <nav class="navegacion">
               <a class="link" href="#">Inicio</a>
               <a class="link" href="#">Nosotros</a>
